--- a/src/app/search-view/search-view.component.html
+++ b/src/app/search-view/search-view.component.html
@@ -1,17 +1,20 @@
 <h3 class="text-center mt-3 mb-3">Search Results</h3>
 
 <br />
-
+<button class="btn btn-primary" (click)="routeToCompare()">Compare</button>
+<br />
 <div class="container-fluid">
   <div class="row">
-    <a *ngFor="let device of devices" class="col mb-4 d-flex align-items-center justify-content-center"
-        routerLink="/devices/device/{{ device.slug }}">
+    <div *ngFor="let device of devices" class="col mb-4 d-flex align-items-center justify-content-center">
       <div class="card" style="width: 18rem;">
+        <input type="checkbox" (change)="compareArrManager(device.slug)">
         <img class="card-img-top scale-75" src="{{ device.thumbnail }}" alt="{{ device.title }}">
         <div class="card-body">
-          <h4 class="d-flex align-items-center justify-content-center mt-3 mb-3 text-center equal-height">{{ device.title }}</h4>
+          <a routerLink="/devices/device/{{ device.slug }}">
+            <h4 class="d-flex align-items-center justify-content-center mt-3 mb-3 text-center equal-height">{{ device.title }}</h4>
+          </a>
         </div>
       </div>
-    </a>
+    </div>
   </div>
 </div>
